--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,6 +1,26 @@
 .footer{
     display: flex;
     padding: 5rem 7rem;
+    justify-content: space-around;
+    @media screen and (max-width:800px){
+        flex-direction: column;
+        padding: 2rem 0;
+        .section{
+            width: 100%;
+            margin: 1rem 0;
+            .header{
+                text-align: center;
+            }
+            p{
+                text-align: center;
+            }
+        }
+        .section1{
+            width: 100%;
+            margin: 1rem 0;
+            text-align: center;
+        }
+    }
 }
 .section{
     width:33.3%;
@@ -98,6 +118,15 @@ a{
     justify-content: space-around;
     border-top: .5px solid #ccc;
     padding:2rem;
+    @media screen and (max-width:800px){
+        padding: 0;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        .copyrightsText{
+            margin-bottom: 1rem;
+        }
+    }
 }
 
 .copyrightsText{
