--- a/src/components/nav bar/navBar.module.scss
+++ b/src/components/nav bar/navBar.module.scss
@@ -22,6 +22,25 @@
     justify-content: space-around;
     align-items: center;
     height: 6rem;
+    position: relative;
+    .toggler{
+        display: none;
+        flex-direction: column;
+        width: 10%;
+        margin: 0;
+        cursor: pointer;
+        span{
+          display: block;
+          width: 25px;
+          height: 3px;
+          margin-bottom: 5px;
+          position: relative;
+          background-color: black;
+          border-radius: 2px;
+          z-index: 1;
+          cursor: pointer;
+        }
+      }
 }
 
 .navLink{
@@ -56,3 +75,20 @@
    color:#E14618;
     
 }
+
+@media screen and (max-width:800px){
+    .navbar{
+//   padding-top: 2rem;
+justify-content: center;
+      .toggler{
+        position: absolute;
+        top: 40px;
+        left: 20px;
+        display: flex;
+      }
+      .navLink{
+  
+        display: none;
+      }
+    }
+  }
