--- a/src/sections/counter/counter.module.scss
+++ b/src/sections/counter/counter.module.scss
@@ -4,7 +4,15 @@
     padding: 5rem 15rem 5rem 15rem;
     margin:auto;
 
-
+@media screen  and (max-width:800px){
+    flex-direction: column;
+    padding: 5rem;
+    align-items: center;
+    .card{
+        width: 100%;
+        margin: 1rem 0;
+    }
+}
 
 }
 
