--- a/src/sections/pricePlan/pricePlan.module.scss
+++ b/src/sections/pricePlan/pricePlan.module.scss
@@ -4,6 +4,14 @@ display: flex;
 flex-direction: column;
 align-items: center;
 background-color:#f7f7f7;
+@media screen and (max-width:800px){
+    .header{
+        padding: 0;
+    }
+    .text{
+        width: 90%;
+    }
+}
 }
 
 .header{
@@ -23,6 +31,9 @@ margin-bottom: 1.5rem;
 .priceList{
 display: flex;
 margin-bottom:2.3rem;
+@media screen and (max-width:800px){
+    flex-direction: column;
+}
 }
 
 .card{
