added responsivness to full website

--- a/src/pages/contact/contactPage.module.scss
+++ b/src/pages/contact/contactPage.module.scss
@@ -9,6 +9,10 @@
     top: -100px;
     height: 17rem;
     align-items: center;
+    @media screen and (max-width:800px){
+        width: auto;
+        flex-wrap: wrap;
+    }
 }
 
 .header{
@@ -20,12 +24,22 @@
     font-size: 2.5rem;
     letter-spacing: 2px;
     margin-right: 1rem;
+    @media screen and (max-width:1000px){
+        display: none;
+    }
+}
+@media screen and (max-width:1000px){
+    .formApplication{
+        display: none;
+    }
 }
 .form{
     margin: auto;
     padding:5rem;
     position: relative;
-    
+    @media screen and (max-width:1000px){
+        display: none;
+    }
 }
 .name2{
 width: 20rem;
@@ -79,7 +93,9 @@ padding:1rem;
 .links{
     position: relative;
     top:20rem;
-
+    @media screen and (max-width:800px){
+        top: 0;
+    }
 }
 
 .btnLink{
@@ -112,10 +128,17 @@ padding:1rem;
     justify-content: center;
     align-items: center;
     margin: auto;
+    @media screen and (max-width:800px){
+        flex-direction: column;
+    }
 }
 
 .footer{
     position: relative;
     top:30rem;
     background-color: #f7f7f7;
+    @media screen and (max-width:1000px){
+        top: 0;
+        margin-top: 5rem;
+    }
 }
