--- a/src/sections/about-icons/aboutIcons.module.scss
+++ b/src/sections/about-icons/aboutIcons.module.scss
@@ -2,7 +2,14 @@
     padding:5rem 10rem;
     display: flex;
     flex-wrap: wrap;
-    
+    @media screen and (max-width:800px){
+        flex-direction: column;
+        padding: 5rem 0;
+        .card{
+            width: auto;
+            margin: 1rem;
+        }
+    }
         
     
 }
