--- a/src/components/our team/ourTeam.module.scss
+++ b/src/components/our team/ourTeam.module.scss
@@ -1,6 +1,12 @@
 .ourTeam{
     padding:6rem 10rem;
     background-color: #f9fafb;
+    @media screen and (max-width:800px){
+        padding: 5rem 0 ;
+        .text{
+            width: auto;
+        }
+    }
 }
 
 .header{
@@ -22,9 +28,20 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
+  @media screen and (max-width:800px){
+      flex-direction: column;
+      align-items: center;
+  }
     div{
         width: 25%;
         margin: 1.5rem;
+        @media screen and (max-width:800px){
+        width: 60%;
+        margin: auto;
+        img{
+            margin: 1.5rem auto;
+        }
+        }
     }
 
     img{
@@ -32,6 +49,6 @@
         margin: 1.5rem;
         height: 20rem;
         filter: grayscale(90);
-        
+        object-fit: cover;
     }
 }
