--- a/src/pages/about/aboutpage.module.scss
+++ b/src/pages/about/aboutpage.module.scss
@@ -2,6 +2,9 @@
     padding: 4rem 15rem;
     text-align: center;
     background-color:#f9fafb;
+    @media screen and (max-width:800px){
+        padding: 2rem 0;
+    }
 }
 
 .text{
@@ -10,7 +13,10 @@
     font-size: 1.2rem;
     margin-bottom:1.5rem;
     font-weight: 400;
-
+    @media screen and (max-width:800px){
+        margin: 1rem ;
+        width: auto;
+    }
 }
 
 .idbox{
