--- a/src/pages/blog/blogPage.module.scss
+++ b/src/pages/blog/blogPage.module.scss
@@ -12,6 +12,18 @@
 }
 .blog{
     padding:2rem 10rem;
+    @media screen and (max-width:800px){
+        padding: 2rem 0;
+        .post{
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin: 1.8rem auto;
+            img{
+                width: 100%;
+            }
+        }
+    }
 }
 
 .post{
